WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170212
LibWebRTCProvider should allow setting encoder and decoder factories
https://bugs.webkit.org/show_bug.cgi?id=170212
Summary
LibWebRTCProvider should allow setting encoder and decoder factories
youenn fablet
Reported
2017-03-28 16:26:04 PDT
And the current implementation is setting Mac specific factories
Attachments
Patch
(5.69 KB, patch)
2017-03-28 16:31 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Fixing test failures
(13.04 KB, patch)
2017-03-28 16:43 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-03-28 16:31:13 PDT
Created
attachment 305665
[details]
Patch
Build Bot
Comment 2
2017-03-28 16:35:16 PDT
Attachment 305665
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:62: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:63: More than one command on the same line [whitespace/newline] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 3
2017-03-28 16:43:38 PDT
Created
attachment 305669
[details]
Fixing test failures
WebKit Commit Bot
Comment 4
2017-03-28 20:51:23 PDT
Comment on
attachment 305665
[details]
Patch Clearing flags on attachment: 305665 Committed
r214525
: <
http://trac.webkit.org/changeset/214525
>
WebKit Commit Bot
Comment 5
2017-03-28 20:51:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug