LibWebRTCProvider should allow setting encoder and decoder factories https://bugs.webkit.org/show_bug.cgi?id=170212

Patch by Youenn Fablet <youenn@apple.com> on 2017-03-28
Reviewed by Eric Carlson.

No change of behavior.
Adding the ability to set encoder/decoder libwebrtc factory getters.
Setting default cocoa factory getters.

* platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::staticFactoryAndThreads):
(WebCore::initializePeerConnectionFactoryAndThreads):
(WebCore::LibWebRTCProvider::setDecoderFactoryGetter):
(WebCore::LibWebRTCProvider::setEncoderFactoryGetter):
(WebCore::LibWebRTCProvider::setPeerConnectionFactory):
* platform/mediastream/libwebrtc/LibWebRTCProvider.h:

Canonical link: https://commits.webkit.org/187140@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214525 268f45cc-cd09-0410-ab3c-d52691b4dbfc